syntax = "proto3";

import "farm_ng_proto/tractor/v1/calibrator.proto";
import "farm_ng_proto/tractor/v1/resource.proto";
import "google/protobuf/timestamp.proto";

package farm_ng_proto.tractor.v1;
option go_package = "github.com/farm_ng/genproto";

message CalibrateBaseToCameraConfiguration {
  // Serialized CaptureCalibrationDatasetResult
  Resource calibration_dataset = 1;

  // Serialized ApriltagRigCalibrationResult
  Resource apriltag_rig_result = 2;

  BaseToCameraInitialization initialization = 3;

  // name of the result.
  string name = 4;
}

message CalibrateBaseToCameraStatus {
  oneof input_required {
    CalibrateBaseToCameraConfiguration input_required_configuration = 1;
  }

  // Serialized CalibrateBaseToCameraResult
  Resource result = 2;

  SolverIterationSummary iteration_summary = 3;
}

message CalibrateBaseToCameraResult {
  // Configuration which initiated the computation of this result.
  CalibrateBaseToCameraConfiguration configuration = 1;

  // A resource of type BaseToCameraModel
  Resource base_to_camera_model_initial = 2;
  Resource base_to_camera_model_solved = 3;

  SolverStatus solver_status = 4;
  double rmse = 5;
  google.protobuf.Timestamp stamp_end = 6;
  // Debug event log.
  Resource event_log = 7;
}
